--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
+			n=arr.length;
 			arr.sort();
   let second_largest = 0;
   for (let i = n - 2; i >= 0; i--) {
