--- a/main.html
+++ b/main.html
@@ -8,18 +8,21 @@
 
 <body>	
 	<script>
-		function secondHighest(arr) {
-			n=arr.length;
-			arr.sort();
-  let second_largest = 0;
-  for (let i = n - 2; i >= 0; i--) {
-    if (arr[i] != arr[n - 1]) {
-      second_largest = arr[i];
-      break;
+		function secondHighest(arr,n) {
+			let first_largest = 0;
+  
+  for (let i = 0; i < n; i++) {
+    if (arr[i] > a[first_largest]) {
+      second_largest = first_largest;
+      first_largest = i;
+    } else if (arr[i] < arr[first_largest]) {
+      if (second_largest == -1 || arr[second_largest] < arr[i]) second_largest = i;
     }
   }
-  return second_largest;		
-	}
+
+  return a[second_largest];
+		}
+			
 
 		function Main() {
 			var n = prompt("Enter the number of elements");
